<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:orientation="vertical"
            tools:context="com.example.databindingsamples.samples.MainActivity">
            <Button
                style="@style/button_style"
                android:onClick="openViewId"
                android:text="@string/viewid_button_text"
                />
            <Button
                style="@style/button_style"
                android:onClick="openBasic"
                android:text="@string/basic_button_text"
                />
            <Button
                style="@style/button_style"
                android:onClick="openCustomBinding"
                android:text="@string/custombinding_button_text"
                />

            <Button
                style="@style/button_style"
                android:onClick="openInclude"
                android:text="@string/include_button_text"
                />
            <Button
                style="@style/button_style"
                android:onClick="openResource"
                android:text="@string/resource_button_text"
                />
            <Button
                style="@style/button_style"
                android:onClick="openCollections"
                android:text="@string/container_button_text"
                />
            <Button
                style="@style/button_style"
                android:onClick="openObservable"
                android:text="@string/observable_button_text"
                />
            <Button
                style="@style/button_style"
                android:onClick="openViewStub"
                android:text="@string/viewstub_button_text"
                />
            <Button
                style="@style/button_style"
                android:onClick="openDynamic"
                android:text="@string/dynamic_button_text"
                />
            <Button
                style="@style/button_style"
                android:onClick="openAutoAttributeSetter"
                android:text="@string/auto_attribute_button_text"
                />
            <Button
                style="@style/button_style"
                android:onClick="openConverters"
                android:text="@string/converters_button_text"
                />
        </LinearLayout>
    </ScrollView>
</layout>